--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,72 @@ body {
     margin: 128px auto;
     width: 768px;
 }
+h1 {
+    text-align: center;
+    color: #333;
+    margin-bottom: 32px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .4);
+}
+
+#calculatrice, #number, .buttons {
+    border-radius: 6px;
+}
+
+#calculatrice {
+    margin: 0 auto;
+    background-color: white;
+    border: 1px solid #3D3D3D;
+    width: 279px;
+    box-shadow: 0 7px 10px rgba(0, 0, 0, .8);
+}
+#header {
+    border-top: 1px solid #777;
+    border-radius: 6px 6px 0 0;
+    padding: 10px;
+}
+
+input#number {
+    text-align: right;
+    background-color: #121212;
+    border: none;
+    border-bottom: 1px solid #777;
+    color: #C8C8C8;
+    font-size: 20px;
+    padding: 16px;
+    width: 227px;
+    box-shadow: inset 0 0 10px 4px rgba(0, 0, 0, .6);
+}
+
+input#number:focus {
+    outline: none;
+}
+
+#body {
+    padding: 0 10px;
+}
+
+.buttons {
+    cursor: default;
+    text-align: center;
+    padding: 7px 12px;
+    font-size: 20px;
+    text-shadow: 0 -1px 1px #000;
+    color: #FFF;
+    font-weight: bold;
+    display: inline-block;
+    border-top: 1px solid #777;
+    width: 34px;
+    background: linear-gradient(#5F5F5F 0%, #404040 100%);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .8);
+    margin-bottom: 10px;
+}
+
+.buttons:hover {
+    background: black;
+    border-top: 1px solid black;
+    text-shadow: 0 -1px 1px black;
+}
+
+.buttons:active {
+    box-shadow: none;
+}
