--- a/css/style.css
+++ b/css/style.css
@@ -1,85 +1,53 @@
-
-body {
-    font-family: 'OpenSans', sans-serif;
-    background: url(../background.jpg) center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -ms-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+main{
+   width: 400px;
+   height: 500px;
+   background-color: white;
+   border-radius: 8px;
+   margin: auto;
+   padding-top: 5px;
 }
 
-#container {
-    font-size: 32px;
-    margin: 128px auto;
-    width: 768px;
-}
-h1 {
-    text-align: center;
-    color: #333;
-    margin-bottom: 32px;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, .4);
+table{
+   border-spacing: 20px;
+   margin: auto;
 }
 
-#calculatrice, #number, .buttons {
-    border-radius: 6px;
+td{
+   width: 60px;
+   height: 60px;
+   background-color: grey;
+   color: black;
+   text-align: center;
+   border-radius: 3px;
+   box-shadow: 5px 5px 8px black;
 }
 
-#calculatrice {
-    margin: 0 auto;
-    background-color: white;
-    border: 1px solid #3D3D3D;
-    width: 279px;
-    box-shadow: 0 7px 10px rgba(0, 0, 0, .8);
-}
-#header {
-    border-top: 1px solid #777;
-    border-radius: 6px 6px 0 0;
-    padding: 10px;
+td:hover{
+   color: red;
 }
 
-input#number {
-    text-align: right;
-    background-color: #121212;
-    border: none;
-    border-bottom: 1px solid #777;
-    color: #C8C8C8;
-    font-size: 20px;
-    padding: 16px;
-    width: 227px;
-    box-shadow: inset 0 0 10px 4px rgba(0, 0, 0, .6);
+#resultat{
+   width: 306px;
+   margin: auto;
+   height: 70px;
+   border-radius: 3px;
+   background-color: black;
+   display: flex;
+   align-items: center;
+   justify-content: flex-end;
+   padding: 5px;
+   font-size: 150%;
+   overflow: hidden;
+   margin-top: 20px;
+   color: white;
 }
 
-input#number:focus {
-    outline: none;
-}
-
-#body {
-    padding: 0 10px;
-}
-
-.buttons {
-    cursor: default;
-    text-align: center;
-    padding: 7px 12px;
-    font-size: 20px;
-    text-shadow: 0 -1px 1px #000;
-    color: #FFF;
-    font-weight: bold;
-    display: inline-block;
-    border-top: 1px solid #777;
-    width: 34px;
-    background: linear-gradient(#5F5F5F 0%, #404040 100%);
-    box-shadow: 0 2px 6px rgba(0, 0, 0, .8);
-    margin-bottom: 10px;
-}
-
-.buttons:hover {
-    background: black;
-    border-top: 1px solid black;
-    text-shadow: 0 -1px 1px black;
-}
-
-.buttons:active {
-    box-shadow: none;
+#clear{
+   width: 100px;
+   height: 20px;
+   margin: auto;
+   background-color: rgba(255, 46, 0, 0.78);
+   text-align: center;
+   border-radius: 3px;
+   box-shadow: 1px 1px 2px rgb(12, 84, 121);
 }
